# ali-oss

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: .env  append_object.rs  copy_object.rs  delete_bucket.rs  delete_multiple_objects.rs  delete_object.rs  get_bucket_info.rs  get_bucket_location.rs  get_bucket_stat.rs  get_object.rs  get_object_meta.rs  get_symlink.rs  head_object.rs  is_object_exist.rs  list_buckets.rs  list_objects.rs  put_bucket.rs  put_object.rs  put_object_stream.rs  put_symlink.rs  sign_object.rs
examples/common/: mod.rs
src/: bucket.rs  client.rs  file.rs  folder.rs  lib.rs
src/types/: bucket_location.rs  bucket_stat.rs  canonicalized_headers.rs  canonicalized_resource.rs  mod.rs  oss_config.rs  oss_error.rs
src/types/signature/: header_signature.rs  mod.rs  param_signature.rs
